Fix spacing in shows table for tablet and desktop

--- a/sprint-3/styles/shows.scss
+++ b/sprint-3/styles/shows.scss
@@ -258,7 +258,7 @@ h1, h2, h4 {
 
     &__item {
         @include tablet {
-            width: 25%;
+            width: 23%;
         }
     }
 }
